Fix alignment of ingredient checkboxes on recipes form

--- a/app/assets/stylesheets/myrecipes.css.scss
+++ b/app/assets/stylesheets/myrecipes.css.scss
@@ -7,3 +7,12 @@ $myrecipes-link: #073b15;
     color: $myrecipes-link;
   }
 }
+
+.checkbox-inline {
+  margin-right: 0.5em;
+
+  .text {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
